[package]

name = "nodes-challenge-bipa"
authors = ["Daniel N Kurosawa"]
edition = "2021"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "blocking", "rustls-tls"] }
diesel = { version = "2.2.4", features =["postgres", "r2d2", "chrono"]}
dotenvy = "0.15"
env_logger = "0.11.5"
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
http = "1.1.0"